--- a/Home.html
+++ b/Home.html
@@ -7,13 +7,13 @@
     <body id="background" background="image1.jpg" >
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style= "margin:25px 100px; border-radius: 10px; height:7%; width:85%;">
-                <a class="navbar-brand" style="margin-left:125px;">LOGO</a>
+                <a class="navbar-brand" style="margin-left:125px;"><img src="bootprint.png" style="width:100%; height:150%;"></a>
                 <button class="navbar-toggler navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 50px; font-family: 'Roboto', sans-serif; font-size: 18;">
                   <ul class="navbar-nav">
                     <li class="nav-item sim-button" style="margin-left: 100px;">
-                      <a class="nav-link" href="#">Home </a>
+                      <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item sim-button" style="margin-left: 100px;">
                       <a class="nav-link" href="#">Account</a>
