--- a/Home.html
+++ b/Home.html
@@ -79,11 +79,11 @@
                   <span>CREATE A PATH ----></span></a>
                     <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
                       <div class="modal-dialog modal-xl">
-                        <div class="modal-content">
+                        <div class="modal-content" style="background-image: url(hiker_girl.jpeg)">
                           <div class="container">
                             <div class="row" style="margin-top:50px">
                               <div class="col-lg-3"  style="padding: 0px;"> <!--border: 1px solid white;   --> 
-                                <p style="margin-left:45px; margin-top:125px">Start:</p>  
+                                <p style="margin-left:45px; margin-top:20px">Start:</p>  
                                 <p style="margin-left:45px; margin-top:50px">Finish:</p>
                                 <p style="margin-left:45px; margin-top:173px">Activity:
                                   <button style="margin-left:85px;">
@@ -95,7 +95,7 @@
                                   <div>
                                       <input id="input" class="form-control form-control-sm" type="text" placeholder="coordinates"> 
                                       <input class="form-control form-control-sm" type="text" placeholder="coordinates"
-                                      style="margin-left:0px; margin-top:40px; margin-bottom:170px; border-radius: 10px; width:70%;">
+                                      style="margin-left:0px; margin-top:40px; margin-bottom:200px; border-radius: 10px; width:70%;">
                                   </div>
                               <div>
                                   <button>
